--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/linearLayoutRoot"
-              xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/linearLayoutRoot"
               android:layout_width="360px"
               android:layout_height="80px"
               android:gravity="center_vertical"
