--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -3,14 +3,15 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="720px"
               android:layout_height="1134px"
-              android:background="@drawable/spalsh_new_background"
               android:orientation="vertical"
+              android:background="@color/white"
               android:splitMotionEvents="false">
 
     <RelativeLayout
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
+        android:background="@color/menu_black"
         android:splitMotionEvents="false">
 
         <Button
@@ -48,160 +49,296 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20px"
+            android:layout_marginTop="40px"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:splitMotionEvents="false">
 
-            <EditText
-                android:id="@+id/nameEt"
-                android:layout_width="650px"
-                android:layout_height="100px"
-                android:background="@drawable/white_bg_rounded"
-                android:capitalize="words"
-                android:hint="@string/name"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="34px"/>
-
-
-            <EditText
-                android:id="@+id/phoneNoEt"
-                android:layout_width="650px"
-                android:layout_height="100px"
-                android:layout_marginTop="10px"
-                android:background="@drawable/white_bg_rounded"
-                android:hint="@string/phone_number"
-                android:inputType="phone"
-                android:maxLength="14"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="34px"/>
-
-            <EditText
-                android:id="@+id/autoNumEt"
-                android:layout_width="650px"
-                android:layout_height="100px"
-                android:layout_marginTop="10px"
-                android:background="@drawable/white_bg_rounded"
-                android:hint="@string/auto_number"
-                android:inputType="textEmailAddress"
-                android:paddingLeft="20px"
-                android:paddingRight="20px"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="34px"/>
-
-           <RelativeLayout
-               android:layout_width="650px"
-               android:layout_height="100px"
-               android:layout_marginTop="10px">
-
-               <Spinner
-                   android:id="@+id/selectCitySp"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:background="@drawable/white_bg_rounded"
-                   android:hint="@string/password"
-                   android:inputType="textPassword"
-                   android:paddingLeft="20px"
-                   android:paddingRight="20px"
-                   android:singleLine="true"
-                   android:spinnerMode="dropdown"
-                   android:textColor="@color/black"
-                   android:textSize="34px"/>
-
-               <ImageView
-                   android:layout_alignParentRight="true"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_centerVertical="true"
-                   android:layout_marginRight="20px"
-                   android:background="@drawable/drop_down_icon"/>
-
-           </RelativeLayout>
-
 
             <RelativeLayout
                 android:layout_width="650px"
-                android:layout_height="260px"
-                android:layout_marginTop="35px"
-                android:background="@drawable/white_bg_rounded"
-                android:paddingLeft="32px">
+                android:layout_height="120px"
+                android:gravity="bottom"
+                >
 
-                <TextView
-                    android:id="@+id/autoType"
-                    android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/imageViewName"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_marginRight="48px"
+                    android:background="@drawable/ic_email"/>
+
+
+                <EditText
+                    android:id="@+id/nameEt"
+                    android:layout_width="525px"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15px"
-                    android:text="@string/Choose_one"
-                    android:textSize="36px"
-                    android:textColor="@color/grey_dark_more"/>
+                    android:layout_toRightOf="@+id/imageViewName"
+                    android:background="@drawable/transparent"
+                    android:capitalize="words"
+                    android:layout_marginBottom="10px"
+                    android:hint="@string/name"
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="34px"/>
 
-                <RelativeLayout
-                    android:id="@+id/isRentedRelative"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/autoType"
-                    android:layout_marginTop="22px">
-
-                    <CheckBox
-                        android:id="@+id/isRentedCheck"
-                        android:layout_width="50px"
-                        android:layout_height="50px"/>
-
-                    <TextView
-                        android:id="@+id/isRentedText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="32px"
-                        android:layout_toRightOf="@+id/isRentedCheck"
-                        android:text="@string/is_rented"
-                        android:textSize="36px"
-                        android:textColor="@color/grey_dark_more"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/isOwnedRelative"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/isRentedRelative"
-                    android:layout_marginTop="22px">
-
-                    <CheckBox
-                        android:id="@+id/isOwnedCheck"
-                        android:layout_width="50px"
-                        android:layout_height="50px"/>
-
-                    <TextView
-                        android:id="@+id/isOwnedText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="32px"
-                        android:layout_toRightOf="@+id/isOwnedCheck"
-                        android:text="@string/is_owned"
-                        android:textSize="36px"
-                        android:textColor="@color/grey_dark_more"/>
-
-                </RelativeLayout>
+                <ImageView
+                    android:id="@+id/imageViewNameLine"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/nameEt"
+                    android:layout_width="525px"
+                    android:layout_height="2px"
+                    android:layout_marginLeft="72px"
+                    android:background="@color/black"/>
 
 
             </RelativeLayout>
 
 
+            <RelativeLayout
+                android:layout_width="650px"
+                android:layout_height="120px"
+                android:gravity="bottom"
+                >
+
+                <ImageView
+                    android:id="@+id/imageViewPhone"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_marginRight="48px"
+                    android:background="@drawable/phone_icon"/>
+
+
+                <EditText
+                    android:id="@+id/phoneNoEt"
+                    android:layout_width="525px"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/imageViewPhone"
+                    android:background="@drawable/transparent"
+                    android:hint="@string/phone_number"
+                    android:inputType="phone"
+                    android:layout_marginBottom="10px"
+                    android:paddingLeft="20px"
+                    android:maxLength="14"
+                    android:paddingRight="20px"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="34px"/>
+
+                <ImageView
+                    android:id="@+id/imageViewPhoneNoLine"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/phoneNoEt"
+                    android:layout_width="525px"
+                    android:layout_height="2px"
+                    android:layout_marginLeft="72px"
+                    android:background="@color/black"/>
+
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="650px"
+                android:layout_height="120px"
+                android:gravity="bottom"
+                >
+
+                <ImageView
+                    android:id="@+id/imageViewAutoNum"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_marginRight="48px"
+                    android:background="@drawable/auto_icon_front_new"/>
+
+
+                <EditText
+                    android:id="@+id/autoNumEt"
+                    android:layout_width="525px"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/imageViewAutoNum"
+                    android:background="@drawable/transparent"
+                    android:capitalize="words"
+                    android:hint="@string/auto_number"
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:layout_marginBottom="10px"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="34px"/>
+
+                <ImageView
+                    android:id="@+id/imageViewAutoNumLine"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/autoNumEt"
+                    android:layout_width="525px"
+                    android:layout_height="2px"
+                    android:layout_marginLeft="72px"
+                    android:background="@color/black"/>
+
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="650px"
+                android:layout_height="120px"
+                android:gravity="bottom">
+
+                <ImageView
+                    android:id="@+id/imageViewCity"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="48px"
+                    android:background="@drawable/home_shape"/>
+
+
+                <Spinner
+                    android:id="@+id/selectCitySp"
+                    android:layout_width="525px"
+                    android:layout_height="80px"
+                    android:layout_toRightOf="@+id/imageViewCity"
+                    android:background="@drawable/transparent"
+                    android:capitalize="words"
+                    android:hint="@string/auto_number"
+                    android:paddingLeft="0px"
+                    android:layout_alignParentBottom="true"
+                    android:paddingRight="20px"
+                    android:dropDownSelector="@drawable/arrow_down"
+                    android:singleLine="true"
+                    android:spinnerMode="dropdown"
+                    android:textColor="@color/black"
+                    android:textSize="34px"/>
+
+                <ImageView
+                    android:layout_alignParentRight="true"
+                    android:layout_width="32px"
+                    android:layout_height="20px"
+                    android:layout_marginRight="90px"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="25px"
+                    android:background="@drawable/arrow_down"/>
+
+                <ImageView
+                    android:id="@+id/imageViewCityLine"
+                    android:layout_width="525px"
+                    android:layout_height="2px"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="72px"
+                    android:background="@color/black"/>
+
+
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:layout_width="650px"
+                android:layout_height="200px"
+                android:layout_marginTop="64px"
+                android:background="@drawable/white_bg_rounded"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="175px"
+                        android:layout_height="2px"
+                        android:layout_alignParentLeft="true"
+                        android:background="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/autoType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/vehicle_status"
+                        android:layout_marginLeft="20px"
+                        android:layout_marginRight="20px"
+                        android:textColor="@color/grey_dark_more"
+                        android:textSize="36px"/>
+
+                    <ImageView
+                        android:layout_width="175px"
+                        android:layout_height="2px"
+                        android:layout_alignParentLeft="true"
+                        android:background="@color/black"/>
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="48px">
+
+                    <RelativeLayout
+                        android:id="@+id/isRentedRelative"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <CheckBox
+                            android:id="@+id/isRentedCheck"
+                            android:layout_width="50px"
+                            android:layout_height="50px"/>
+
+                        <TextView
+                            android:id="@+id/isRentedText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="32px"
+                            android:layout_toRightOf="@+id/isRentedCheck"
+                            android:text="@string/owner"
+                            android:textColor="@color/grey_dark_more"
+                            android:textSize="36px"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/isOwnedRelative"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="120px"
+                        android:layout_toRightOf="@+id/isRentedRelative">
+
+                        <CheckBox
+                            android:id="@+id/isOwnedCheck"
+                            android:layout_width="50px"
+                            android:layout_height="50px"/>
+
+                        <TextView
+                            android:id="@+id/isOwnedText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="32px"
+                            android:layout_toRightOf="@+id/isOwnedCheck"
+                            android:text="@string/rented"
+                            android:textColor="@color/grey_dark_more"
+                            android:textSize="36px"/>
+
+                    </RelativeLayout>
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <Button
             android:id="@+id/signUpBtn"
-            android:layout_width="648px"
+            android:layout_width="280px"
             android:layout_height="99px"
             android:layout_marginTop="45px"
-            android:text="@string/register"
+            android:text="@string/verify_me"
             android:background="@drawable/new_orange_btn_selector_rounded"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"/>
