--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/spinner_layout.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/spinner_layout.xml
@@ -16,8 +16,8 @@
         android:text="5."
         android:textColor="@color/black"
         android:gravity="center_vertical"
-        android:textSize="30px"
-        android:layout_marginLeft="20px"
+        android:textSize="26px"
+        android:padding="10px"
         />
 
 </LinearLayout>
